--- a/www/luci-static/rooter/css/splash.css
+++ b/www/luci-static/rooter/css/splash.css
@@ -11,7 +11,7 @@
 	margin-bottom: 20px;
 }
 .rooterPageContent{
-	padding: 10px 10px;
+	padding: 5px 10px;
 }
 
 .rooterHeadBox{
@@ -22,6 +22,7 @@
 	overflow: hidden;
 	width: 460px;
 	margin: auto;
+	padding-top: 10px;
 	opacity: 0;
 }
 
@@ -29,7 +30,7 @@
 	background: url("../img/kangaroo_800.png") no-repeat;
 	background-size: 100%;
 	float: left;
-	height: 165px;
+	height: 163px;
 	width: 250px;
 	opacity: 0.4;
 }
