--- a/www/luci-static/rooter/css/splash.css
+++ b/www/luci-static/rooter/css/splash.css
@@ -30,7 +30,7 @@
 }
 
 footer{
-	border: none;
+	border-top: 1px solid #DDD;
 	text-align: center;
 	font-size: 11px;
 	color: #666;
@@ -95,7 +95,6 @@ footer A{
 	max-width: 800px ;
 	margin: auto;
 }
-
 .rooterItem{
 	overflow: hidden;
 	border: 1px solid #EEE;
@@ -157,11 +156,13 @@ footer A{
 	overflow: hidden;
 }
 .modemStatusRow .msTitle{
+	border-radius: 2px 2px 0 0;
 	padding: 5px 5px ;
 	background: #484848;
 	color: #fff;
 }
 .modemStatusRow .msCell{
+	border-radius: 10px;
 	display: inline-block;
 	margin-top: 10px;
 	float:left;
