--- a/medias/icomoon_splash/style.css
+++ b/medias/icomoon_splash/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon_splash';
-  src:  url('fonts/icomoon_splash.eot?vja16g');
-  src:  url('fonts/icomoon_splash.eot?vja16g#iefix') format('embedded-opentype'),
-    url('fonts/icomoon_splash.ttf?vja16g') format('truetype'),
-    url('fonts/icomoon_splash.woff?vja16g') format('woff'),
-    url('fonts/icomoon_splash.svg?vja16g#icomoon_splash') format('svg');
+  src:  url('fonts/icomoon_splash.eot?hk5z08');
+  src:  url('fonts/icomoon_splash.eot?hk5z08#iefix') format('embedded-opentype'),
+    url('fonts/icomoon_splash.ttf?hk5z08') format('truetype'),
+    url('fonts/icomoon_splash.woff?hk5z08') format('woff'),
+    url('fonts/icomoon_splash.svg?hk5z08#icomoon_splash') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -39,6 +39,12 @@
 .icon-home:before {
   content: "\f015";
 }
+.icon-exclamation-triangle:before {
+  content: "\f071";
+}
+.icon-warning:before {
+  content: "\f071";
+}
 .icon-comments:before {
   content: "\f086";
 }
@@ -56,4 +62,7 @@
 }
 .icon-podcast:before {
   content: "\e91c";
+}
+.icon-earth:before {
+  content: "\e9ca";
 }
