--- a/www/luci-static/rooter/css/splash.css
+++ b/www/luci-static/rooter/css/splash.css
@@ -16,10 +16,18 @@
 .rooterPageHead{
 	background: #55F;
 	padding: 10px 5px;
-	margin-bottom: 20px;
+	background: rgb(140,140,255);
+	background: -moz-linear-gradient(top, rgba(140,140,255,1) 0%, rgba(85,85,255,1) 100%);
+	background: -webkit-linear-gradient(top, rgba(140,140,255,1) 0%,rgba(85,85,255,1) 100%);
+	background: linear-gradient(to bottom, rgba(140,140,255,1) 0%,rgba(85,85,255,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8c8cff', endColorstr='#5555ff',GradientType=0 );
+	border-bottom: 1px solid rgba(0,0,0,0.7);
+
 }
 .rooterPageContent{
-	padding: 5px 10px;
+	border-top: 1px solid rgba(255,255,255,0.8);
+	border-bottom: 1px solid rgba(0,0,0, 0.1);
+	padding: 25px 10px;
 	max-width: 950px;
 	margin: auto;
 }
@@ -31,7 +39,7 @@
 	line-height: 120%;
 }
 .rooterPageFoot{
-	border-top: 1px solid #DDD;
+	border-top: 1px solid rgba(255,255,255,0.8);
 	margin-top: 20px;
 	padding: 10px 10px;
 	max-width: 950px;
@@ -206,6 +214,11 @@
 	padding: 5px 5px ;
 	background: #484848;
 	color: #fff;
+	background: rgb(99,99,99);
+	background: -moz-linear-gradient(top, rgba(99,99,99,1) 0%, rgba(72,72,72,1) 100%);
+	background: -webkit-linear-gradient(top, rgba(99,99,99,1) 0%,rgba(72,72,72,1) 100%);
+	background: linear-gradient(to bottom, rgba(99,99,99,1) 0%,rgba(72,72,72,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#636363', endColorstr='#484848',GradientType=0 );
 }
 .modemStatusRow .msCell{
 	border-radius: 10px;
@@ -279,10 +292,11 @@
 
 /* @end */
 
-/*Color changer */
+
+/* Easy Color changer ------------- */
 
 .rooterPageHead{
-	background: #55F;
+	/*background: #55F;*/
 }
 .rooterItemTitle .icon,
 #rooterSplashStatus h3{
