--- a/www/luci-static/rooter/css/splash.css
+++ b/www/luci-static/rooter/css/splash.css
@@ -37,6 +37,7 @@
 	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 32px;
 	line-height: 120%;
+	text-shadow: -1px -1px 2px rgba(0,0,0,0.5);
 }
 .rooterPageFoot{
 	border-top: 1px solid rgba(255,255,255,0.8);
@@ -228,6 +229,7 @@
 	border: 1px solid #ccc;
 	padding-bottom: 5px;
 	background: #fff;
+
 }
 .modemStatusRow1 .msCell{
 	width: 176px;
@@ -238,6 +240,7 @@
 	font-weight: bold;
 	font-size: 70px;
 	line-height: 110%;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
 }
 .modemStatusRow1 .msDesc{
 	color: #000;
@@ -261,6 +264,7 @@
 	color: #F00;
 	font-size: 32px;
 	font-weight: bold;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
 }
 #msCell_per{}
 #msCell_csq{}
